Arrumando descricao Pagliares

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -348,7 +348,7 @@
                 <div class="col-lg-3 col-md-6">
                     <img src="../../assets/img/page/pessoa4.png" class="person rounded-circle" alt="">
                     <h5 class="font-weight-bold text-center mt-4 mb-3">Rodrigo Martins Pagliares</h5>
-                    <p class="text-blue text-center">Orientou nas ações e desenvolvimento do projeto.</p>
+                    <p class="text-blue text-center">Trabalhou na implantação e aspectos de segurança do sistema.</p>
                 </div>
             </div>
         </div>
