--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
         <div class="caption">
             <h1 class="font-weight-bold">SisGEO</h1>
             <h4>Sistema de compartilhamento de dados geoespaciais</h4>
-            <a href="https://sisgeo.unifal-mg.edu.br/app/map/furnas" target="_blank" class="btn btn-primary">Acesse a
+            <a href="sisgeo.unifal-mg.edu.br/webmap" target="_blank" class="btn btn-primary">Acesse a
                 ferramenta</a>
         </div>
     </header>
@@ -140,12 +140,12 @@
             <div class="row">
                 <div class="col-md-4 mb-5 text-center">
                     <div class="card">
-                        <a [routerLink]="['/mapeamento']" target="_blank"><img
+                        <a [routerLink]="['/mapeamento']"><img
                                 class="project-img img-fluid card-img-top" src="../../assets/img/page/mapeamento.png"
                                 alt=""></a>
                     </div>
                     <div class="bg-project">
-                        <a [routerLink]="['/mapeamento']" target="_blank">
+                        <a [routerLink]="['/mapeamento']">
                             <h4 class="text-blue mb-2">Mapeamento do lago de furnas</h4>
                         </a>
                         <p class="text-muted mb-0">Monitoramento da área do espelho d' água e volume útil por imagens de
@@ -155,11 +155,11 @@
                 </div>
                 <div class="col-md-4 mb-5 text-center">
                     <div class="card">
-                        <a [routerLink]="['/bacia']" target="_blank"><img class="project-img img-fluid card-img-top"
+                        <a [routerLink]="['/bacia']"><img class="project-img img-fluid card-img-top"
                                 src="../../assets/img/page/bacia.png" alt=""></a>
                     </div>
                     <div class="bg-project">
-                        <a [routerLink]="['/bacia']" target="_blank">
+                        <a [routerLink]="['/bacia']">
                             <h4 class="text-blue mb-2">Bacia Hidrográfica de Furnas</h4>
                         </a>
                         <p class="text-muted mb-0">Repositório de dados cartográficos da bacia hidrográfica de Furnas
@@ -168,12 +168,12 @@
                 </div>
                 <div class="col-md-4 mb-5 text-center">
                     <div class="card">
-                        <a [routerLink]="['/topografia']" target="_blank"><img
+                        <a [routerLink]="['/topografia']"><img
                                 class="project-img img-fluid card-img-top"
                                 src="../../assets/img/page/projeto-topografia.png" alt=""></a>
                     </div>
                     <div class="bg-project">
-                        <a [routerLink]="['/topografia']" target="_blank">
+                        <a [routerLink]="['/topografia']">
                             <h4 class="text-blue mb-2">Topografia de Furnas</h4>
                         </a>
                         <p class="text-muted mb-0">Repositório de dados topográficos da bacia hidrográfica de Furnas</p>
@@ -356,7 +356,7 @@
     <footer id="footer" class="footerPage">
         <div class="container">
             <div class="content-section-heading text-center">
-                <h2 class="white-text mb-4 pt-3">Contatos</h2>
+                <h2 class="white-text mb-5 pt-4">Contatos</h2>
             </div>
             <div class="row">
                 <div class="col-md-4">
