Caminho relativo no botão da ferramenta arrumado

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
         <div class="caption">
             <h1 class="font-weight-bold">SisGEO</h1>
             <h4>Sistema de compartilhamento de dados geoespaciais</h4>
-            <a href="sisgeo.unifal-mg.edu.br/webmap" target="_blank" class="btn btn-primary">Acesse a
+            <a [routerLink]="['/webmap']" target="_blank" class="btn btn-primary">Acesse a
                 ferramenta</a>
         </div>
     </header>
