Ajustes de fonte, navbar e footer

--- a/src/app/bacia/bacia.component.css
+++ b/src/app/bacia/bacia.component.css
@@ -49,6 +49,7 @@ p {
 
 .text-blue {
   color: var(--navbar-color);
+  font-family: "Patua One";
   padding: 15px;
 }
 
@@ -125,4 +126,8 @@ p {
 
 .counter {
   margin-left: 0;
+}
+
+.logo {
+  height: 35px;
 }
