--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -396,7 +396,8 @@
             </div>
             <div class="footer-copyright">
                 <div class="container center-copyright">
-                    <span class="white-text">© 2020 Copyright</span>
+                    <img class="img-fluid logo" src="../../assets/img/page/sisgeo.png" alt="">
+                    <!--span class="white-text">© 2020 Copyright</span-->
                 </div>
             </div>
         </div>
