--- a/src/app/mapeamento/home/mapeamento.component.css
+++ b/src/app/mapeamento/home/mapeamento.component.css
@@ -53,6 +53,7 @@ p {
 
 .text-blue {
   color: var(--navbar-color);
+  font-family: "Patua One";
   padding: 15px;
 }
 
@@ -116,4 +117,8 @@ p {
 
 .counter {
   margin-left: 0;
+}
+
+.logo {
+  height: 35px;
 }
