--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -117,14 +117,14 @@
                     uma das coordenadoras do
                     TerraBrasilis, Dra. Karine Reis Ferreira, pela disponibilização de esforços em prol da elaboração de
                     nosso
-                    sistema, Obrigado! Nosso
+                    sistema, Obrigado! Agradecemos também ao
+                    Prof. Dr. Marcio Abondanza Vitiello pela cessão de imagem de seu banco de imagens pessoal. Nosso
                     agradecimento também é direcionado a André Fernando Araújo de Carvalho, pertencente à Equipe de
                     Desenvolvimento do TerraBrasilis, pelo
                     suporte nas diversas etapas de estruturação do SisGEO, Obrigado! Esperamos que você desfrute desta
                     ferramenta
                     e - que ela possa lhe
-                    auxiliar - na visualização e aquisição de dados espaciais para sua pesquisa! Agradecemos também ao
-                    Prof. Dr. Marcio Abondanza Vitiello pela cessão de imagem de seu banco de imagens pessoal.
+                    auxiliar - na visualização e aquisição de dados espaciais para sua pesquisa!
                 </p><br>
                 <span>Bom trabalho a todos(as).</span>
                 <span class="team-sisgeo">Equipe SisGEO v1.0</span>
