--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -300,11 +300,11 @@
             <div class="row align-items-center">
                 <div class="col-md-4 mb-5 text-center">
                     <a href="https://www.unifal-mg.edu.br/geografia/" target="_blank"><img class="partner-img img-fluid"
-                            src="../../assets/img/page/geografia.jpeg" alt=""></a>
+                            src="../../assets/img/page/geografia.png" alt=""></a>
                 </div>
                 <div class="col-md-4 mb-5 text-center">
                     <a href="http://www.unifal-mg.edu.br/geohidro" target="_blank"><img class="partner-img img-fluid"
-                            src="../../assets/img/page/geohidro.jpeg" alt=""></a>
+                            src="../../assets/img/page/geohidro.png" alt=""></a>
                 </div>
                 <div class="col-md-4 mb-5 text-center">
                     <a href="http://terrabrasilis.dpi.inpe.br/" target="_blank"><img class="partner-img img-fluid"
@@ -334,7 +334,7 @@
                 <div class="col-lg-3 col-md-6">
                     <img src="../../assets/img/page/pessoa2.png" class="person rounded-circle" alt="">
                     <h5 class="font-weight-bold text-center mt-4 mb-3">Guilherme Vieira</h5>
-                    <p class="text-blue text-center">Atuou na desenvolvimento e design do site de projetos, alterações
+                    <p class="text-blue text-center">Atuou no desenvolvimento e design do site de projetos, alterações
                         no código fonte da ferramenta e inserção de dados no Geoserver.
                     </p>
                 </div>
