--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -19,7 +19,7 @@
                     <a class="nav-link scroll" href="#team">Desenvolvedores</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link scroll" href="#footer">Contato</a>
+                    <a class="nav-link scroll" style="cursor: pointer;" (click)="scroll()">Contato</a>
                 </li>
             </ul>
         </div>
