Finalizando pr, adicionando imagens e removendo comentários

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="content">
     <app-navbar></app-navbar>
     <header>
-        <img src="../../assets/img/page/backgroud-image.jpg" alt="">
+        <img src="../../assets/img/page/background-image.png" alt="">
         <div class="caption">
             <h1 class="font-weight-bold">SisGEO</h1>
             <h4>Sistema de compartilhamento de dados geoespaciais</h4>
@@ -31,7 +31,7 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <img class="img-fluid img-about" src="../../assets/img/page/ferramenta.jpeg" alt="">
+                    <img class="img-fluid img-about" src="../../assets/img/page/ferramenta-original.png" alt="">
                     <span class="desc-ferramenta text-blue mb-3">Captura de tela da ferramenta SisGeo v1.0</span>
                 </div>
             </div>
