- implementa lógica de limitar quantidade de layers ativas por vision - corrige estilo do outline do button de fechar o modal - insere o favicon do sisgeo

--- a/src/app/wms/wms-search/wms-search.component.html
+++ b/src/app/wms/wms-search/wms-search.component.html
@@ -1,6 +1,6 @@
 
 <!-- close button -->
-<div class="modal-header fechar">
+<div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true" (click)="closeDialog()"><i class="material-icons">clear</i></button>
 </div>
 <div></div>
