--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
         <div class="modal fade" id="firstNotice">
             <div class="modal-dialog">
                 <div class="modal-content modalinf">
-                    <div class="modal-header fechar">
+                    <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><i class="material-icons">clear</i></button>
                     </div> 					
                     <div class="modal-body ">						
