--- a/src/app/bacia/bacia.component.css
+++ b/src/app/bacia/bacia.component.css
@@ -1,12 +1,3 @@
-.content {
-  height: 100vh;
-  overflow-y: auto;
-  position: absolute;
-  scroll-behavior: smooth;
-  z-index: 1;
-  width: 100%;
-}
-
 p {
   font-family: Helvetica, Arial, sans-serif;
   font-size: 15.5px;
@@ -32,7 +23,7 @@ p {
 
 /* About */
 .about {
-  padding: 6rem 0;
+  padding: 6rem 0 3rem 0px;
 }
 
 .about .container .row .col-lg-5 {
@@ -45,6 +36,11 @@ p {
 
 .about .container .row .col-md-6 {
   padding-left: 0px;
+}
+
+.about .container .row .col-md-6 .paragraph p {
+  padding-left: 0px;
+  padding-top: 30px;
 }
 
 .text-blue {
@@ -65,24 +61,15 @@ p {
   padding: 30px;
 }
 
-/* Projects */
-.bg-project {
-  background-color: aliceblue;
-  padding: 20px;
-  padding-bottom: 35px;
-  height: 47%;
-  padding-top: 35px;
-  box-shadow: 0px 1px 1px 1px #b3d7ffcc;
+.textGroup {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
-.project-img {
-  height: 230px;
-}
-
-.project-img:hover {
-  opacity: 0.8;
-}
-
-.projects {
-  padding-bottom: 6rem;
+.textGroup h5,
+p {
+  color: var(--navbar-color);
+  padding-left: 15px;
+  padding-right: 15px;
 }
