--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,12 +1,3 @@
-.content {
-  height: 100vh;
-  overflow-y: auto;
-  scroll-behavior: smooth;
-  position: absolute;
-  z-index: 1;
-  width: 100%;
-}
-
 p {
   font-family: Helvetica, Arial, sans-serif;
   font-size: 15.5px;
@@ -33,61 +24,58 @@ p {
 /* Navbar and Header */
 header {
   height: 50vh;
+  padding-top: 7rem;
+  padding-bottom: 2rem;
+  text-align: center;
+  color: #fff;
 }
 
 header img {
   width: 100%;
   height: 50vh;
   opacity: 0.4;
-  object-fit: cover;
-}
-
-.caption {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  position: absolute;
   top: 0;
+  object-fit: cover;
+  position: absolute;
+  z-index: -1;
+  left: 0;
+}
+
+.subheading {
+  display: flex;
   justify-content: center;
-  height: 50vh;
-  width: 100%;
 }
 
-@media only screen and (max-width: 500px) {
-  .caption h4 {
-    width: 90% !important;
-  }
-}
-
-.caption h1 {
-  font-size: 65px;
+.subheading h4 {
   color: var(--navbar-color);
   font-family: "Patua One";
   text-align: center;
-  margin-top: 70px;
-}
-
-.caption h4 {
-  color: var(--navbar-color);
-  font-family: "Patua One";
-  text-align: center;
-  padding-top: 33px;
   width: 450px;
+  padding-top: 33px;
 }
 
-.caption .btn {
+.heading {
+  color: var(--navbar-color);
+  font-family: "Patua One";
+  font-size: 4rem;
+  font-weight: bold;
+  line-height: 1.5rem;
+  margin-bottom: 25px;
+}
+
+header .container .btn {
+  padding: 0.7rem 1.2rem;
+  font-size: 1.125rem;
   background-color: var(--navbar-color);
   color: #fff;
-  margin-top: 30px;
   border-radius: 0px;
   font-weight: 600;
-  font-size: 19px;
-  padding: 11px 16px 11px 16px;
+  margin-top: 30px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.48);
   transition: top ease 1.2s;
 }
 
-.caption .btn:hover {
+header .container .btn:hover {
   box-shadow: 4px 5px 12px 4px rgba(0, 0, 0, 0.48);
   transform: scale(1.02);
   border-color: transparent;
@@ -95,31 +83,40 @@ header img {
   z-index: 1;
 }
 
-@media only screen and (max-width: 414px) {
-  .caption h4 {
-    padding-top: 20px;
-    font-size: 20px;
-  }
-
-  .caption h1 {
-    font-size: 55px;
+@media (min-width: 768px) {
+  header {
+    padding-top: 7rem;
+    padding-bottom: 2.5rem;
   }
 }
 
-@media only screen and (max-width: 360px) {
-  .caption .btn {
-    margin-top: 10px !important;
-    padding: 8px;
+@media (max-height: 680px) {
+  header .container .btn {
+    margin-top: 0px !important;
+  }
+}
+
+@media (max-height: 640px) {
+  .subheading h4 {
+    padding-top: 0px !important;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .subheading h4 {
+    width: 90% !important;
   }
 }
 
 /* About */
 .about {
-  padding-top: 6rem;
+  padding-top: 5rem;
+  margin-bottom: -4rem;
 }
 
 .about .container .row .col-lg-5 {
   padding-left: 0px;
+  padding-top: 30px;
 }
 
 .about .container .row .initial {
@@ -132,6 +129,7 @@ header img {
 
 .about .container .row .col-md-6 .paragraph p {
   padding-left: 0px;
+  padding-top: 30px;
 }
 
 .text-blue {
@@ -174,6 +172,7 @@ header img {
 
 .project-img {
   height: 230px;
+  object-fit: cover;
 }
 
 .project-img:hover {
@@ -181,11 +180,13 @@ header img {
 }
 
 .projects {
-  padding-top: 6rem;
+  padding-top: 5rem;
+  margin-bottom: -4rem;
 }
 
 .projects .container .row {
   padding: 25px;
+  padding-bottom: 0;
 }
 
 .projects .container .row .col-md-4 {
@@ -202,10 +203,10 @@ header img {
   }
 }
 
-
 /*Technologies*/
 .technologies {
-  padding-top: 6rem;
+  padding-top: 5rem;
+  margin-bottom: -4rem;
 }
 
 .tech-imgs {
@@ -236,7 +237,8 @@ header img {
 
 /*Parceiros*/
 .partners {
-  padding-top: 6rem;
+  padding-top: 5rem;
+  margin-bottom: -4rem;
 }
 
 .partner-img {
@@ -250,8 +252,8 @@ header img {
 
 /*Equipe*/
 .team {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
+  padding-top: 5rem;
+  padding-bottom: 3rem;
 }
 
 .person {
@@ -285,14 +287,6 @@ header img {
 .contact {
   color: #ffffff9c;
   padding-left: 0px;
-}
-
-#toTop {
-  position: fixed;
-  bottom: 10px;
-  right: 25px;
-  cursor: pointer;
-  border-radius: 35px;
 }
 
 .textGroup {
