--- a/src/app/mapeamento/home/mapeamento.component.css
+++ b/src/app/mapeamento/home/mapeamento.component.css
@@ -1,12 +1,3 @@
-.content {
-  height: 100vh;
-  overflow-y: auto;
-  position: absolute;
-  scroll-behavior: smooth;
-  z-index: 1;
-  width: 100%;
-}
-
 p {
   font-family: Helvetica, Arial, sans-serif;
   font-size: 15.5px;
@@ -32,7 +23,7 @@ p {
 
 /* About */
 .about {
-  padding: 6rem 0;
+  padding: 6rem 0 3rem 0px;
 }
 
 .about .container .row .col-lg-5 {
@@ -49,6 +40,7 @@ p {
 
 .about .container .row .col-md-6 .paragraph p {
   padding-left: 0px;
+  padding-top: 30px;
 }
 
 .text-blue {
@@ -69,39 +61,6 @@ p {
   padding: 30px;
 }
 
-/*Footer*/
-.footerPage {
-  background-color: var(--blue-footer);
-}
-
-.white-text {
-  color: #fff;
-}
-
-.footer-copyright {
-  padding-bottom: 25px;
-}
-
-.center-copyright {
-  display: flex;
-  justify-content: center;
-  margin-top: 20px;
-}
-
-.contact {
-  color: #ffffff9c;
-  padding-left: 0px;
-}
-
-#toTop {
-  position: fixed;
-  bottom: 10px;
-  right: 10px;
-  cursor: pointer;
-  display: none;
-  border-radius: 35px;
-}
-
 .textGroup {
   display: flex;
   flex-direction: column;
@@ -113,12 +72,4 @@ p {
   color: var(--navbar-color);
   padding-left: 15px;
   padding-right: 15px;
-}
-
-.counter {
-  margin-left: 0;
-}
-
-.logo {
-  height: 35px;
 }
