- remove a maioria das chamadas feitas a updateOverlayerLegends, pois sua lógica não se aplica mais, já que não estamos fazendo requisição de legenda para o geoserver - desabilita o "changeDetector" padrão do angular, agora é necessário chamar o "detectChanges" - em map.component.ts remove o método "mapLayerOnOff" que definia se uma layer iria ser ativada ou desativada, agora são feitas chamadas diretamente aos métodos de ativar e desativar layers do MapaService - remove a variável overlayerChecked que estava sendo usada em map.component.ts para definir se o botao da vision estava habilitado ou não, e utiliza vision.enabled para isso - o spinner agora não espera resposta do "fitBounds", para chamar o .hide()

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -81,12 +81,12 @@
             </ng-template>
             <div class="material-switch grp-prj pull-right">
                 <input id="{{(project.id | cleanWhiteSpace) + '_grp-crtl' }}" name="someSwitchOption002" type="checkbox" (change)="projectGroupOnOff($event.srcElement, project)" checked="{{ (project.enabled) ? 'checked' : null }}"/>
-                <label *ngIf="!overlayerChecked" class="bg-white" style="cursor: default;"></label>
-                <label *ngIf="overlayerChecked" for="{{(project.id | cleanWhiteSpace)  + '_grp-crtl' }}" class="bg-white"></label>
+                <label *ngIf="!project.enabled" class="bg-white" style="cursor: default;"></label>
+                <label *ngIf="project.enabled" for="{{(project.id | cleanWhiteSpace)  + '_grp-crtl' }}" class="bg-white"></label>
             </div>
 
-            <div class="grid-stack" id="{{ 'grid-stack-' + project.id }}">
-                <div *ngFor="let layer of project.layers" class="grid-stack-item" id="{{ (layer.id | cleanWhiteSpace) + '_gslayer' }}" data-gs-x="0" data-gs-y="{{ layer.uiOrder }}" data-gs-width="12" data-gs-height="1">
+            <div class="grid-stack" id="{{ 'grid-stack-' + project.id }}" attr.data-vision-id="{{project.id}}">
+                <div *ngFor="let layer of project.layers" class="grid-stack-item" id="{{ (layer.id | cleanWhiteSpace) + '_gslayer' }}" attr.data-layer-id="{{layer.id}}" data-gs-x="0" data-gs-y="{{ layer.uiOrder }}" data-gs-width="12" data-gs-height="1">
                     <div class="grid-stack-item-content">
                         <ul class="list-unstyled components list h-100 layer-list">
                             <li>
